--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <section class="cont">
+        <div class="cont">
             <div class="box1">
                 <div style="z-index: 999;">
                     <div class="heading">
@@ -110,7 +110,7 @@
                 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
                 Coded by <a href="https://khalteck.netlify.app/">Khalid Oyeneye</a>.
             </div>
-        </section>
+        </div>
         
         
         <script src="" async defer></script>
