--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="heading">
                     <img src="image-kira.jpg" alt="image of kira whittle" class="image">
                     <div class="title">
-                        <p style="color: rgba(236, 242, 248, 0.9);">Kira Whittle</p>
+                        <p>Kira Whittle</p>
                         <p>Verified Graduate</p>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="heading">
                     <img src="image-jeanette.jpg" alt="image of jeanette harmon" class="image">
                     <div class="title">
-                        <p style="color: rgba(236, 242, 248, 0.9);">Jeanette Harmon</p>
+                        <p>Jeanette Harmon</p>
                         <p>Verified Graduate</p>
                     </div>
                 </div>
